--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body class="m-0 p-0 box-border overflow-hidden">
     <div class="wrapper w-[100vw] h-[100vh] flex flex-wrap justify-center items-center bg-purple-700">
-        <div class="container w-[25rem] flex flex-col gap-6">
-            <h1 class="text-center text-[2rem] text-gray-100 font-semibold uppercase opacity-90 leading-[1.2]">Password Generator</h1>
+        <div class="container w-[28rem] flex flex-col gap-6">
+            <h1 class="text-center xs:text-[2rem] text-[1.5rem] text-gray-100 font-semibold uppercase opacity-90 leading-[1.2] mx-5">Password Generator</h1>
             <!-- Password block -->
-            <div class="display-container bg-[#1c0d2c] flex justify-between py-1 rounded-[1rem] transition-all ease-in duration-200 hover:scale-105">
+            <div class="display-container bg-[#1c0d2c] flex justify-between py-1 rounded-[1rem] mx-5
+             transition-all ease-in duration-200 hover:scale-105">
                 <input readonly id="password" name="password" placeholder="PASSWORD" data-passwordDisplay 
                 class="w-[90%] text-xl font-bold outline-none pl-5 bg-[#1c0d2c] rounded-[1rem] text-yellow-400 placeholder-yellow-400 placeholder-opacity-80"> <!--data-passwordDisplay is a custom attribute-->
                 <button data-copy class="flex flex-col relative pr-1">
@@ -23,7 +24,7 @@
             </div>
 
             <!-- input container -->
-            <div class="password-queries-section flex flex-col px-7 rounded-[1rem] py-6 bg-[#1c0d2c] gap-6">
+            <div class="password-queries-section flex flex-col px-7 rounded-[1rem] py-6 bg-[#1c0d2c] gap-6 mx-5">
                 <div class="length-container flex flex-row justify-between">
                     <p class="pass-text text-white font-semibold text-[1.2rem]">Password Length</p>
                     <p id="lengthNumber" class="text-[1.2rem] text-yellow-300 font-bold">0</p>
@@ -57,11 +58,11 @@
                 </div>
                 <!-- Generate Password -->
                 <div class="generatePassword cursor-pointer border-[#1c0d2c] text-center py-3 text-yellow-200 uppercase font-bold rounded-[1rem] 
-                tracking-[1px] bg-[#c338ff] hover:scale-105 transition-all ease-in duration-200">Generate Password</div>
+                tracking-[1px] bg-[#c338ff] ">Generate Password</div>
             </div>
         </div>
     </div>
-
+<!-- hover:scale-105 transition-all ease-in duration-200 -->
     <script src="script.js"></script>
 </body>
 </html> 
