--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
             <h1 class="text-center xs:text-[2rem] text-[1.5rem] text-gray-100 font-semibold uppercase
              opacity-90 leading-[1.2] mx-5">Password Generator</h1>
             <!-- Password block -->
-            <div class="display-container bg-[#1c0d2c] flex justify-between py-1 rounded-[1rem] mx-5
+            <div class="display-container bg-[#1c0d2c] flex justify-between py-1 rounded-[1rem] mx-7
              transition-all ease-in duration-200 hover:scale-105">
                 <input readonly id="password" name="password" placeholder="PASSWORD" data-passwordDisplay 
                 class="w-[90%] text-xl font-bold outline-none pl-5 bg-[#1c0d2c] rounded-[1rem]
                 text-yellow-400 placeholder-yellow-400 placeholder-opacity-80"> <!--data-passwordDisplay is a custom attribute-->
                 <button data-copy class="flex flex-col relative pr-1">
                     <span data-copyMsg class="text-yellow-300 bg-[#30278e] text-[1rem]
-                    font-semibold absolute bottom-[80%] left-[1%]"></span>
+                    font-semibold absolute bottom-[80%]"></span>
                     <i class="fa-solid fa-copy p-4 text-[#00ffcc] text-xl"></i>
                 </button>
             </div>
 
             <!-- input container -->
-            <div class="password-queries-section flex flex-col px-7 rounded-[1rem] py-6 bg-[#1c0d2c] gap-6 mx-5">
+            <div class="password-queries-section flex flex-col px-7 rounded-[1rem] py-6 bg-[#1c0d2c] gap-6 mx-7">
                 <div class="length-container flex flex-row justify-between">
                     <p class="pass-text text-white font-semibold text-[1.2rem]">Password Length</p>
                     <p id="lengthNumber" class="text-[1.2rem] text-yellow-300 font-bold">0</p>
