--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -67,6 +66,6 @@
             </div>
         </div>
     </div>
-    <script src="logic.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
