--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+        <script type="module" src="script.js"></script>
         <title>Password Generator</title>
     </head>
 <body class="m-0 p-0 box-border overflow-hidden">
@@ -67,6 +68,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    
 </body>
 </html> 
