--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
         <script type="module" src="script.js"></script>
-        <title>Password Generator</title>
+        <title>PassGenPro2 | Password Generator</title>
     </head>
 <body class="m-0 p-0 box-border overflow-hidden">
     <div class="wrapper w-[100vw] h-[100vh] flex flex-wrap justify-center items-center bg-purple-700">
